Fix next / prev on mobile

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -48,7 +48,7 @@
 
 .mobile-home {
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 
   .mobile-youtube-container {
     position: relative;
